# gn-sample

./: .clang-format  .gitignore  BUILD.gn
src/: BUILD.gn  main.cpp  mylib.cpp  mylib.hpp
test/: BUILD.gn  DummyTest.cpp
