import("//build/toolchain/compiler.gni")


group("default") {
  deps = [
    "//src:gn-sample"
  ]
}

group("tests") {
  deps = [
    "//test:DummyTest"
  ]
  testonly = true
}

# A pool called "console" in the root BUILD.gn is magic and represents ninja's
# built-in console pool. (Requires a GN with `gn --version` >= 552353.)
pool("console") {
  depth = 1
}
